# websocket_rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-ci.yml
src/: lib.rs  main.rs
src/handlers/: mod.rs  position.rs  websocket.rs
src/view/: mod.rs
static/: Chat.html  inputPosition.html  userinbound.html  userrequest.html
templates/: hello.html
