[package]
name = "websocket_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
askama = "0.12"
tower-http = { version = "0.5.2", features = ["fs"] }