[package]
name = "websocket_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
askama = "0.12"
tower-http = { version = "0.6.1", features = ["fs"] }
dotenv = "0.15.0"
redis = { version = "0.27.2", features = ["tokio-comp"] }
bb8 = "0.8"
bb8-redis = "0.17.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"